--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div style="display:flex;justify-content:center;align-items:center">
-        <img class="avatar" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?q=80&w=400&auto=format&fit=crop" alt="Anthony avatar placeholder" />
+          <img src="images/profile.jpg" alt="Anthony Bauman" class="avatar">
       </div>
     </div>
   </section>
@@ -68,78 +68,140 @@
     </div>
   </section>
 
-  <!-- SKILLS -->
-  <section id="skills">
-    <div class="container">
-      <p class="kicker">SKILLS</p>
-      <h2>Tools I use</h2>
-      <div class="stack">
-        <span class="chip">HTML5</span>
-        <span class="chip">CSS3 (Grid/Flex)</span>
-        <span class="chip">JavaScript (learning)</span>
-        <span class="chip">Git & GitHub</span>
-        <span class="chip">GitHub Pages</span>
-        <span class="chip">Copilot / ChatGPT</span>
-        <span class="chip">Accessibility & i18n</span>
-      </div>
+<!-- SKILLS -->
+<section id="skills">
+  <div class="container">
+    <p class="kicker">SKILLS</p>
+    <h2>Tools I Use</h2>
+    
+    <div class="stack">
+      <span class="chip">Stablemate®</span>
+      <span class="chip">Soundboard</span>
     </div>
-  </section>
 
-  <!-- PROJECTS -->
-  <section id="projects">
-    <div class="container">
-      <p class="kicker">PROJECTS</p>
-      <h2>Recent work</h2>
-
-      <div class="cards">
-        <!-- Project 1 -->
-        <article class="card">
-          <div class="project">
-            <img src="https://images.unsplash.com/photo-1517180102446-f3ece451e9d8?q=80&w=1200&auto=format&fit=crop" alt="Portfolio hero preview" />
-            <div>
-              <h3 style="margin:.25rem 0">Personal Portfolio</h3>
-              <p class="subtitle">Single-page portfolio with semantic HTML, responsive CSS, and accessible color contrast.</p>
-              <div class="meta">
-                <a class="link" href="https://cashmerecode.github.io/portfolio-website/" target="_blank" rel="noopener">Live demo</a>
-                <a class="link" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">Repository</a>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project 2 -->
-        <article class="card">
-          <div class="project">
-            <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?q=80&w=1200&auto=format&fit=crop" alt="Timeline preview" />
-            <div>
-              <h3 style="margin:.25rem 0">Intel Sustainability Timeline</h3>
-              <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
-              <div class="meta">
-                <a class="link" href="#" aria-disabled="true">Live demo</a>
-                <a class="link" href="#" aria-disabled="true">Repository</a>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project 3 -->
-        <article class="card">
-          <div class="project">
-            <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1200&auto=format&fit=crop" alt="UX game concept preview" />
-            <div>
-              <h3 style="margin:.25rem 0">charity: water — Game Concept</h3>
-              <p class="subtitle">UX exploration with research → ideation → prototyping → test notes distilled into a simple demo.</p>
-              <div class="meta">
-                <a class="link" href="#" aria-disabled="true">Live demo</a>
-                <a class="link" href="#" aria-disabled="true">Repository</a>
-              </div>
-            </div>
-          </div>
-        </article>
-
-      </div>
+    <div class="stack">
+      <span class="chip">VPS</span>
+      <span class="chip">Hosting</span>
+      <span class="chip">Rootkits</span>
     </div>
-  </section>
+
+    <div class="stack">
+      <span class="chip">PHP</span>
+      <span class="chip">MySQL</span>
+      <span class="chip">HTML5</span>
+      <span class="chip">CSS3</span>
+      <span class="chip">JavaScript</span>
+    </div>
+
+    <div class="stack">
+      <span class="chip">Stripe</span>
+      <span class="chip">Twilio</span>
+    </div>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects">
+  <div class="container">
+    <p class="kicker">PROJECTS</p>
+    <h2>Recent Work</h2>
+
+    <!-- Completed -->
+    <h3 style="margin:8px 0 12px">Completed</h3>
+    <div class="cards">
+      <!-- Stablemate -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1581093588401-22a9a0e1e4b4?q=80&w=1200&auto=format&fit=crop" alt="Stablemate platform preview">
+          <div>
+            <h4 style="margin:.25rem 0">Stablemate®</h4>
+            <p class="subtitle">Global skill exchange marketplace. Verified members, encrypted meetings, seamless payments.</p>
+            <div class="meta">
+              <a class="link" href="https://stablemate.app" target="_blank" rel="noopener">Live site</a>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- Soundboard -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1603575448362-2f9c8a0a2c69?q=80&w=1200&auto=format&fit=crop" alt="Soundboard portal preview">
+          <div>
+            <h4 style="margin:.25rem 0">Soundboard</h4>
+            <p class="subtitle">Internal operations portal powering Stablemate® workflows, verification, and compliance.</p>
+            <div class="meta">
+              <a class="link" href="https://soundboard.stablemate.app" target="_blank" rel="noopener">Live site</a>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- YourDrink -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1600891965055-d2c8a1a87c1a?q=80&w=1200&auto=format&fit=crop" alt="YourDrink preview">
+          <div>
+            <h4 style="margin:.25rem 0">YourDrink</h4>
+            <p class="subtitle">Mixology brand showcasing specialty spirits, shakes, floats, and preparation techniques.</p>
+            <div class="meta">
+              <a class="link" href="https://yourdrink.app" target="_blank" rel="noopener">Live site</a>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- Portfolio -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1517180102446-f3ece451e9d8?q=80&w=1200&auto=format&fit=crop" alt="Portfolio preview">
+          <div>
+            <h4 style="margin:.25rem 0">Personal Portfolio</h4>
+            <p class="subtitle">Single-page portfolio with semantic HTML, responsive CSS, and accessible color contrast.</p>
+            <div class="meta">
+              <a class="link" href="https://cashmerecode.github.io/portfolio-website/" target="_blank" rel="noopener">Live demo</a>
+              <a class="link" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">Repository</a>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+
+    <!-- In Progress -->
+    <h3 style="margin:28px 0 12px">In Progress</h3>
+    <div class="cards">
+      <!-- Intel Timeline -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?q=80&w=1200&auto=format&fit=crop" alt="Intel timeline preview">
+          <div>
+            <h4 style="margin:.25rem 0">Intel Sustainability Timeline</h4>
+            <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
+            <div class="meta">
+              <a class="link" aria-disabled="true">Live demo (coming soon)</a>
+              <a class="link" aria-disabled="true">Repository (coming soon)</a>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- charity: water Concept -->
+      <article class="card">
+        <div class="project">
+          <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1200&auto=format&fit=crop" alt="charity: water concept preview">
+          <div>
+            <h4 style="margin:.25rem 0">charity: water — Game Concept</h4>
+            <p class="subtitle">UX exploration: research → ideation → prototype → test notes distilled into a demo.</p>
+            <div class="meta">
+              <a class="link" aria-disabled="true">Live demo (coming soon)</a>
+              <a class="link" aria-disabled="true">Repository (coming soon)</a>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
 
   <!-- CONTACT -->
   <section id="contact">
