--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
   </header>
 
   <!-- HERO -->
-  <section id="home" class="hero">
-    <div class="container grid">
-      <div>
-        <span class="tag">AI-assisted Front-End</span>
-        <h1 class="title">Building useful, accessible, revenue-ready web projects.</h1>
-        <p class="subtitle">
+<section id="home" class="hero">
+  <div class="container grid">
+    <div>
+      <span class="tag">Global Lensed Creator</span>
+      <h1 class="title">
+        Building trustworthy, useful, accessible, revenue-ready middle-out platforms.
+      </h1>
+      <p class="subtitle">
           UNLV student & builder shipping fast with semantic HTML, modern CSS, and growing JS skills.
-          Responsible AI + solid workflow. Less fluff, more product.
-        </p>
+          Responsible AI + solid workflow. Less fluff, more product. From Stablemate® to Soundboard 
+          and YourDrink - AB® - can design ecosystems that are secure, scalable, and human-centered.
+      </p>
         <div class="cta">
           <a class="btn" href="#projects">View Projects</a>
           <a class="btn secondary" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">Repo</a>
+          <a href="#contact" class="btn secondary">Get in Touch</a>
         </div>
       </div>
       <div style="display:flex;justify-content:center;align-items:center">
