--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div style="display:flex;justify-content:center;align-items:center">
-          <img src="images/profile.jpg" alt="Anthony Bauman" class="avatar">
+          <img src="images/profile.png" alt="Anthony Bauman" class="avatar">
       </div>
     </div>
   </section>
@@ -116,7 +116,7 @@
       <!-- Stablemate -->
       <article class="card">
         <div class="project">
-          <img src="https://images.unsplash.com/photo-1581093588401-22a9a0e1e4b4?q=80&w=1200&auto=format&fit=crop" alt="Stablemate platform preview">
+          <img src="stablemate_logo.png" alt="Stablemate platform preview">
           <div>
             <h4 style="margin:.25rem 0">Stablemate®</h4>
             <p class="subtitle">Global skill exchange marketplace. Verified members, encrypted meetings, seamless payments.</p>
@@ -130,7 +130,7 @@
       <!-- Soundboard -->
       <article class="card">
         <div class="project">
-          <img src="https://images.unsplash.com/photo-1603575448362-2f9c8a0a2c69?q=80&w=1200&auto=format&fit=crop" alt="Soundboard portal preview">
+          <img src="studio.png" alt="Soundboard portal preview">
           <div>
             <h4 style="margin:.25rem 0">Soundboard</h4>
             <p class="subtitle">Internal operations portal powering Stablemate® workflows, verification, and compliance.</p>
