--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <!-- Stablemate -->
       <article class="card">
         <div class="project">
-          <img src="stablemate_logo.png" alt="Stablemate platform preview">
+          <img src="images/stablemate_logo.png" alt="Stablemate platform preview">
           <div>
             <h4 style="margin:.25rem 0">Stablemate®</h4>
             <p class="subtitle">Global skill exchange marketplace. Verified members, encrypted meetings, seamless payments.</p>
@@ -130,7 +130,7 @@
       <!-- Soundboard -->
       <article class="card">
         <div class="project">
-          <img src="studio.png" alt="Soundboard portal preview">
+          <img src="images/studio.jpeg" alt="Soundboard portal preview">
           <div>
             <h4 style="margin:.25rem 0">Soundboard</h4>
             <p class="subtitle">Internal operations portal powering Stablemate® workflows, verification, and compliance.</p>
