--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h4 style="margin:.25rem 0">YourDrink</h4>
             <p class="subtitle">Mixology brand showcasing specialty spirits, shakes, floats, and preparation techniques.</p>
             <div class="meta">
-              <a class="link" href="https://yourdrink.app" target="_blank" rel="noopener">Live site</a>
+              <a class="link" href="https://yourdrink.app" target="_blank" rel="noopener">Serving Soon!</a>
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
 
   <footer>
     <div class="container">
-      © 2025 Anthony Bauman. Built with HTML, CSS, and a little AI assistance.
+      © 2025 Anthony Bauman. Built by Steady Flow, LLC.
     </div>
   </footer>
 </body>
