--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <h2>Let’s connect</h2>
       <p class="subtitle">For collaborations, contracts, or feedback, reach out directly.</p>
       <div class="contact">
-        <a class="btn" href="mailto:you@example.com">Email</a>
+        <a class="btn" href="mailto:ab@steadyflow.co">Email</a>
         <a class="btn secondary" href="https://github.com/cashmerecode" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div>
