--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <!-- YourDrink -->
       <article class="card">
         <div class="project">
-          <img src="https://images.unsplash.com/photo-1600891965055-d2c8a1a87c1a?q=80&w=1200&auto=format&fit=crop" alt="YourDrink preview">
+          <img src="images/YourDrink.png" alt="YourDrink preview">
           <div>
             <h4 style="margin:.25rem 0">YourDrink</h4>
             <p class="subtitle">Mixology brand showcasing specialty spirits, shakes, floats, and preparation techniques.</p>
@@ -177,7 +177,7 @@
       <!-- Intel Timeline -->
       <article class="card">
         <div class="project">
-          <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?q=80&w=1200&auto=format&fit=crop" alt="Intel timeline preview">
+          <img src="images/intel.png" alt="Intel timeline preview">
           <div>
             <h4 style="margin:.25rem 0">Intel Sustainability Timeline</h4>
             <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
