--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <!-- Intel Timeline -->
       <article class="card">
         <div class="project">
-          <img src="images/intel.png" alt="Intel timeline preview">
+          <img src="images/Intel.png" alt="Intel timeline preview">
           <div>
             <h4 style="margin:.25rem 0">Intel Sustainability Timeline</h4>
             <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
