--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Anthony Bauman — Portfolio</title>
+  <title>Anthony Bauman Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -194,7 +194,7 @@
         <div class="project">
           <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1200&auto=format&fit=crop" alt="charity: water concept preview">
           <div>
-            <h4 style="margin:.25rem 0">charity: water — Game Concept</h4>
+            <h4 style="margin:.25rem 0">charity:WATER Game Concept</h4>
             <p class="subtitle">UX exploration: research → ideation → prototype → test notes distilled into a demo.</p>
             <div class="meta">
               <a class="link" aria-disabled="true">Live demo (coming soon)</a>
