--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Anthony Bauman Portfolio</title>
+  <meta name="description" content="Portfolio of Anthony Bauman — projects, skills, and contact." />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-Hx1j3P7WZV0KgX3T1JG0+VRu8yxYq5x9YgA/9nQ19u/4Aq6o3c6PQzT6wQ2u4z7Aqf0aXo0Z1S5Mf6n6zd1lMw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -14,36 +16,37 @@
       <a class="logo" href="#home">Anthony<span class="dot">.</span>Bauman</a>
       <nav aria-label="Primary">
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about"><i class="fa-solid fa-user"></i> About</a></li>
+          <li><a href="#skills"><i class="fa-solid fa-code"></i> Skills</a></li>
+          <li><a href="#projects"><i class="fa-solid fa-diagram-project"></i> Projects</a></li>
+          <li><a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <!-- HERO -->
-<section id="home" class="hero">
-  <div class="container grid">
-    <div>
-      <span class="tag">Global Lensed Creator</span>
-      <h1 class="title">
-        Building trustworthy, useful, accessible, revenue-ready middle-out platforms.
-      </h1>
-      <p class="subtitle">
+  <section id="home" class="hero">
+    <div class="container grid">
+      <div>
+        <span class="tag">Global Lensed Creator</span>
+        <h1 class="title">Building trustworthy, useful, accessible, revenue-ready middle-out platforms.</h1>
+        <p class="subtitle">
           UNLV student & builder shipping fast with semantic HTML, modern CSS, and growing JS skills.
-          Responsible AI + solid workflow. Less fluff, more product. From Stablemate® to Soundboard 
-          and YourDrink - AB® - can design ecosystems that are secure, scalable, and human-centered.
-      </p>
+          Responsible AI + solid workflow. Less fluff, more product. From Stablemate® to Soundboard and
+          YourDrink — AB® — can design ecosystems that are secure, scalable, and human-centered.
+        </p>
         <div class="cta">
-          <a class="btn" href="#projects">View Projects</a>
-          <a class="btn secondary" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">Repo</a>
-          <a href="#contact" class="btn secondary">Get in Touch</a>
+          <a class="btn" href="#projects"><i class="fa-solid fa-arrow-down"></i> View Projects</a>
+          <a class="btn secondary" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">
+            <i class="fa-brands fa-github"></i> Repo
+          </a>
+          <a class="btn secondary" href="#contact"><i class="fa-solid fa-paper-plane"></i> Get in Touch</a>
         </div>
       </div>
+
       <div style="display:flex;justify-content:center;align-items:center">
-          <img src="images/profile.png" alt="Anthony Bauman" class="avatar">
+        <img src="images/profile.png" alt="Portrait of Anthony Bauman" class="avatar" />
       </div>
     </div>
   </section>
@@ -56,10 +59,12 @@
       <div class="cards">
         <article class="card">
           <p>
-            I’m developing a multi-brand ecosystem (Stablemate, Soundboard, logistics ops). This term I’m sharpening fundamentals,
-            shipping on cadence, and designing for accessibility & localization so products scale beyond one context.
+            I’m developing a multi-brand ecosystem (Stablemate, Soundboard, logistics ops). This term I’m sharpening
+            fundamentals, shipping on cadence, and designing for accessibility & localization so products scale
+            beyond one context.
           </p>
         </article>
+
         <article class="card">
           <h3 style="margin-top:0">Highlights</h3>
           <ul style="margin:0 0 0 1rem; line-height:1.6">
@@ -72,140 +77,161 @@
     </div>
   </section>
 
-<!-- SKILLS -->
-<section id="skills">
-  <div class="container">
-    <p class="kicker">SKILLS</p>
-    <h2>Tools I Use</h2>
-    
-    <div class="stack">
-      <span class="chip">Stablemate®</span>
-      <span class="chip">Soundboard</span>
+  <!-- SKILLS -->
+  <section id="skills">
+    <div class="container">
+      <p class="kicker">SKILLS</p>
+      <h2>Tools I Use</h2>
+
+      <div class="stack">
+        <span class="chip">Stablemate®</span>
+        <span class="chip">Soundboard</span>
+      </div>
+
+      <div class="stack">
+        <span class="chip">VPS</span>
+        <span class="chip">Hosting</span>
+        <span class="chip">Rootkits</span>
+      </div>
+
+      <div class="stack">
+        <span class="chip">PHP</span>
+        <span class="chip">MySQL</span>
+        <span class="chip">HTML5</span>
+        <span class="chip">CSS3</span>
+        <span class="chip">JavaScript</span>
+      </div>
+
+      <div class="stack">
+        <span class="chip">Stripe</span>
+        <span class="chip">Twilio</span>
+      </div>
     </div>
+  </section>
 
-    <div class="stack">
-      <span class="chip">VPS</span>
-      <span class="chip">Hosting</span>
-      <span class="chip">Rootkits</span>
-    </div>
+  <!-- PROJECTS -->
+  <section id="projects">
+    <div class="container">
+      <p class="kicker">PROJECTS</p>
+      <h2>Recent Work</h2>
 
-    <div class="stack">
-      <span class="chip">PHP</span>
-      <span class="chip">MySQL</span>
-      <span class="chip">HTML5</span>
-      <span class="chip">CSS3</span>
-      <span class="chip">JavaScript</span>
-    </div>
+      <!-- Completed -->
+      <h3 style="margin:8px 0 12px">Completed</h3>
+      <div class="cards">
 
-    <div class="stack">
-      <span class="chip">Stripe</span>
-      <span class="chip">Twilio</span>
-    </div>
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section id="projects">
-  <div class="container">
-    <p class="kicker">PROJECTS</p>
-    <h2>Recent Work</h2>
-
-    <!-- Completed -->
-    <h3 style="margin:8px 0 12px">Completed</h3>
-    <div class="cards">
-      <!-- Stablemate -->
-      <article class="card">
-        <div class="project">
-          <img src="images/stablemate_logo.png" alt="Stablemate platform preview">
-          <div>
-            <h4 style="margin:.25rem 0">Stablemate®</h4>
-            <p class="subtitle">Global skill exchange marketplace. Verified members, encrypted meetings, seamless payments.</p>
-            <div class="meta">
-              <a class="link" href="https://stablemate.app" target="_blank" rel="noopener">Live site</a>
+        <!-- Stablemate -->
+        <article class="card">
+          <div class="project">
+            <img src="images/stablemate_logo.png" alt="Stablemate platform preview" />
+            <div>
+              <h4 style="margin:.25rem 0">Stablemate®</h4>
+              <p class="subtitle">Global skill exchange marketplace. Verified members, encrypted meetings, seamless payments.</p>
+              <div class="meta">
+                <a class="link" href="https://stablemate.app" target="_blank" rel="noopener">
+                  <i class="fa-solid fa-up-right-from-square"></i> Live site
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
+        </article>
 
-      <!-- Soundboard -->
-      <article class="card">
-        <div class="project">
-          <img src="images/studio.jpeg" alt="Soundboard portal preview">
-          <div>
-            <h4 style="margin:.25rem 0">Soundboard</h4>
-            <p class="subtitle">Internal operations portal powering Stablemate® workflows, verification, and compliance.</p>
-            <div class="meta">
-              <a class="link" href="https://soundboard.stablemate.app" target="_blank" rel="noopener">Live site</a>
+        <!-- Soundboard -->
+        <article class="card">
+          <div class="project">
+            <img src="images/studio.jpeg" alt="Soundboard portal preview" />
+            <div>
+              <h4 style="margin:.25rem 0">Soundboard</h4>
+              <p class="subtitle">Internal operations portal powering Stablemate® workflows, verification, and compliance.</p>
+              <div class="meta">
+                <a class="link" href="https://soundboard.stablemate.app" target="_blank" rel="noopener">
+                  <i class="fa-solid fa-up-right-from-square"></i> Live site
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
+        </article>
 
-      <!-- YourDrink -->
-      <article class="card">
-        <div class="project">
-          <img src="images/YourDrink.png" alt="YourDrink preview">
-          <div>
-            <h4 style="margin:.25rem 0">YourDrink</h4>
-            <p class="subtitle">Mixology brand showcasing specialty spirits, shakes, floats, and preparation techniques.</p>
-            <div class="meta">
-              <a class="link" href="https://yourdrink.app" target="_blank" rel="noopener">Serving Soon!</a>
+        <!-- YourDrink -->
+        <article class="card">
+          <div class="project">
+            <img src="images/YourDrink.png" alt="YourDrink preview" />
+            <div>
+              <h4 style="margin:.25rem 0">YourDrink</h4>
+              <p class="subtitle">Mixology brand showcasing specialty spirits, shakes, floats, and preparation techniques.</p>
+              <div class="meta">
+                <a class="link" href="https://yourdrink.app" target="_blank" rel="noopener">
+                  <i class="fa-solid fa-martini-glass-citrus"></i> Serving Soon!
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
+        </article>
 
-      <!-- Portfolio -->
-      <article class="card">
-        <div class="project">
-          <img src="https://images.unsplash.com/photo-1517180102446-f3ece451e9d8?q=80&w=1200&auto=format&fit=crop" alt="Portfolio preview">
-          <div>
-            <h4 style="margin:.25rem 0">Personal Portfolio</h4>
-            <p class="subtitle">Single-page portfolio with semantic HTML, responsive CSS, and accessible color contrast.</p>
-            <div class="meta">
-              <a class="link" href="https://cashmerecode.github.io/portfolio-website/" target="_blank" rel="noopener">Live demo</a>
-              <a class="link" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">Repository</a>
+        <!-- Portfolio -->
+        <article class="card">
+          <div class="project">
+            <img src="https://images.unsplash.com/photo-1517180102446-f3ece451e9d8?q=80&w=1200&auto=format&fit=crop" alt="Portfolio preview" />
+            <div>
+              <h4 style="margin:.25rem 0">Personal Portfolio</h4>
+              <p class="subtitle">Single-page portfolio with semantic HTML, responsive CSS, and accessible color contrast.</p>
+              <div class="meta">
+                <a class="link" href="https://cashmerecode.github.io/portfolio-website/" target="_blank" rel="noopener">
+                  <i class="fa-solid fa-link"></i> Live demo
+                </a>
+                <a class="link" href="https://github.com/cashmerecode/portfolio-website" target="_blank" rel="noopener">
+                  <i class="fa-brands fa-github"></i> Repository
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
+        </article>
+      </div>
+
+      <!-- In Progress -->
+      <h3 style="margin:28px 0 12px">In Progress</h3>
+      <div class="cards">
+
+        <!-- Intel Timeline -->
+        <article class="card">
+          <div class="project">
+            <img src="images/Intel.png" alt="Intel timeline preview" />
+            <div>
+              <h4 style="margin:.25rem 0">Intel Sustainability Timeline</h4>
+              <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
+              <div class="meta">
+                <a class="link" aria-disabled="true" role="button" tabindex="-1">
+                  <i class="fa-regular fa-circle-dot"></i> Live demo (coming soon)
+                </a>
+                <a class="link" aria-disabled="true" role="button" tabindex="-1">
+                  <i class="fa-regular fa-folder-open"></i> Repository (coming soon)
+                </a>
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <!-- charity: water Concept -->
+        <article class="card">
+          <div class="project">
+            <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1200&auto=format&fit=crop" alt="charity: water concept preview" />
+            <div>
+              <h4 style="margin:.25rem 0">charity:WATER Game Concept</h4>
+              <p class="subtitle">UX exploration: research → ideation → prototype → test notes distilled into a demo.</p>
+              <div class="meta">
+                <a class="link" aria-disabled="true" role="button" tabindex="-1">
+                  <i class="fa-regular fa-circle-dot"></i> Live demo (coming soon)
+                </a>
+                <a class="link" aria-disabled="true" role="button" tabindex="-1">
+                  <i class="fa-regular fa-folder-open"></i> Repository (coming soon)
+                </a>
+              </div>
+            </div>
+          </div>
+        </article>
+
+      </div>
     </div>
-
-    <!-- In Progress -->
-    <h3 style="margin:28px 0 12px">In Progress</h3>
-    <div class="cards">
-      <!-- Intel Timeline -->
-      <article class="card">
-        <div class="project">
-          <img src="images/Intel.png" alt="Intel timeline preview">
-          <div>
-            <h4 style="margin:.25rem 0">Intel Sustainability Timeline</h4>
-            <p class="subtitle">Responsive timeline component with mobile-first layout and readable typography.</p>
-            <div class="meta">
-              <a class="link" aria-disabled="true">Live demo (coming soon)</a>
-              <a class="link" aria-disabled="true">Repository (coming soon)</a>
-            </div>
-          </div>
-        </div>
-      </article>
-
-      <!-- charity: water Concept -->
-      <article class="card">
-        <div class="project">
-          <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1200&auto=format&fit=crop" alt="charity: water concept preview">
-          <div>
-            <h4 style="margin:.25rem 0">charity:WATER Game Concept</h4>
-            <p class="subtitle">UX exploration: research → ideation → prototype → test notes distilled into a demo.</p>
-            <div class="meta">
-              <a class="link" aria-disabled="true">Live demo (coming soon)</a>
-              <a class="link" aria-disabled="true">Repository (coming soon)</a>
-            </div>
-          </div>
-        </div>
-      </article>
-    </div>
-  </div>
-</section>
+  </section>
 
   <!-- CONTACT -->
   <section id="contact">
@@ -214,8 +240,10 @@
       <h2>Let’s connect</h2>
       <p class="subtitle">For collaborations, contracts, or feedback, reach out directly.</p>
       <div class="contact">
-        <a class="btn" href="mailto:ab@steadyflow.co">Email</a>
-        <a class="btn secondary" href="https://github.com/cashmerecode" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="mailto:ab@steadyflow.co"><i class="fa-solid fa-envelope"></i> Email</a>
+        <a class="btn secondary" href="https://github.com/cashmerecode" target="_blank" rel="noopener">
+          <i class="fa-brands fa-github"></i> GitHub
+        </a>
       </div>
     </div>
   </section>
