--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <span class="tag">Global Lensed Creator</span>
         <h1 class="title">Building trustworthy, useful, accessible, revenue-ready middle-out platforms.</h1>
         <p class="subtitle">
-          UNLV student & builder shipping fast with semantic HTML, modern CSS, and growing JS skills.
-          Responsible AI + solid workflow. Less fluff, more product. From Stablemate® to Soundboard and
-          YourDrink — AB® — can design ecosystems that are secure, scalable, and human-centered.
+          UNLV computer science student & producer shipping fast with skills. I use responsible resources and disciplined, airtight workflows—less is more. From Stablemate® to Soundboard and YourDrink, and beyond, I design ecosystems that are secure, scalable, and human-centered.
         </p>
         <div class="cta">
           <a class="btn" href="#projects"><i class="fa-solid fa-arrow-down"></i> View Projects</a>
