--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span class="tag">Global Lensed Creator</span>
         <h1 class="title">Building trustworthy, useful, accessible, revenue-ready middle-out platforms.</h1>
         <p class="subtitle">
-          UNLV computer science student & producer shipping fast with skills. I use responsible resources and disciplined, airtight workflows. From Stablemate® to Soundboard and YourDrink, and beyond, I design ecosystems that are secure, scalable, and human-centered.
+          UNLV computer science student & producer shipping fast with skills. I use responsible resources and disciplined, airtight workflows. From Stablemate® to Soundboard, YourDrink, and beyond, I design ecosystems that are secure, scalable, and human-centered.
         </p>
         <div class="cta">
           <a class="btn" href="#projects"><i class="fa-solid fa-arrow-down"></i> View Projects</a>
