--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Anthony Bauman Portfolio</title>
   <meta name="description" content="Portfolio of Anthony Bauman — projects, skills, and contact." />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-Hx1j3P7WZV0KgX3T1JG0+VRu8yxYq5x9YgA/9nQ19u/4Aq6o3c6PQzT6wQ2u4z7Aqf0aXo0Z1S5Mf6n6zd1lMw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" referrerpolicy="no-referrer" />
 </head>
 <body>
 
